test(m0): add end-to-end validation and artifact script for M0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,4 +62,6 @@ explicit_package_bases = true
 [tool.pytest.ini_options]
 addopts = "--strict-markers --disable-warnings"
 testpaths = ["tests"]
-
+markers = [
+  "slow: marks tests as slow-running"
+]
